--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
 <!-- Add gallery items to this list -->
 <ul class="gallery"></ul>
 
-<script src="js/gallery.js" type="module"></script>
+<script src="./js/gallery.js" type="module"></script>
 <script src="
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script>
